plugins {
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'
targetCompatibility = '17'

ext {
    springPulsarVersion = '1.2.3'
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation "org.springframework.pulsar:spring-pulsar:${springPulsarVersion}"
    implementation "org.springframework.pulsar:spring-pulsar-cache-provider:${springPulsarVersion}"
    implementation 'org.projectlombok:lombok'
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
    
    // OpenTelemetry dependencies
    implementation 'io.opentelemetry:opentelemetry-api:1.32.0'
    implementation 'io.opentelemetry:opentelemetry-sdk:1.32.0'
    implementation 'io.opentelemetry:opentelemetry-exporter-logging:1.32.0'
    
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(JavaExec) {
    jvmArgs = ['--add-opens', 'java.base/sun.net=ALL-UNNAMED']
} 